--- a/roles/vault-init/defaults/main.yml
+++ b/roles/vault-init/defaults/main.yml
@@ -1,10 +1,10 @@
 ---
 # defaults file for anisble-role-vault-init
 
-vault_addr: "{{ ansible_fqdn }}"
+vault_addr: 127.0.0.1
 vault_port: 8200
-vault_key: "{{ vault_certs }}/{{ansible_fqdn | regex_replace('^www\\.', '') }}.pem"
 vault_user: "vault"
 vault_group: "vault"
 vault_service: "vault"
 vault_keysfile: "~/.hashicorp_vault_keys.json"
+vault_cluster_port: 8201
