--- a/roles/vault-install/defaults/main.yml
+++ b/roles/vault-install/defaults/main.yml
@@ -17,3 +17,5 @@ vault_profile: "/etc/profile.d/vault.sh"
 vault_path: "/etc/vault.d/"
 vault_zip_url: "https://releases.hashicorp.com/vault/1.7.1+ent/vault_1.7.1+ent_linux_amd64.zip"
 vault_addr: "127.0.0.1"
+kms_key: "985f577d-7855-40ce-9d73-22924d0c5e15"
+vault_region: "us-east-1"
